style.css
/* Styles go here! */
@keyframes fadein{
  0% { opacity:0; }
  66% { opacity:0; }
  100% { opacity:1; }
}

body {
  background: radial-gradient(circle, rgba(246,199,219,1) 0%, rgba(148,187,233,1) 100%);
  /* background-image: url("./images/flower-background-3.JPG"); */
  background-size: cover;
  transition: margin-left .5s; /* If you want a transition effect */
  margin: 0;
}


/* Main content  */

#main {
  display: flex;
  transition: 0.5s;
  height: 100vh;
  flex-direction: column;
}

.sidebar-open #main {
  margin-left: 200px;
}

.main-image {
  height: 200px;
  background-position: center;
  background-size: contain; 
  padding-top: 33px;
}

#flower-main {
  text-align: left;
  display: flex;
  flex-flow: wrap;
  margin: auto;
  justify-content: center;
  height: 200px;
}

.name {
  font-family: Optima, sans-serif;
}

.h2 {
  font-weight: 400;
}

.meaning {
  font-family: Optima, sans-serif;
}

.sound {
  font-family: Optima, sans-serif;
}

.content {
  padding-top: 50px;
  padding-left: 30px;
  z-index: 1;
}

#visualizer {
  display: flex;
  flex: 1;
  justify-content: center;
  z-index: -1;
}

canvas {
  height: 500px;
  width: 500px;
  z-index: -1;
}


/* Sidebar view and hover */

#sidebar {
    height: 100%; /* 100% Full-height */
    width: 25px; /* 0 width - change this with JavaScript */
    position: absolute; /* Position them relative to the browser window */
    top: 0;
    left: 0;
    overflow-x: hidden; /* Disable horizontal scroll */
    background-color: rgba(255, 255, 255, 0.664); /* Black*/
    transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
    box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.2), 0 10px 20px 0 rgba(0, 0, 0, 0.19)
    /* border-right: 1px solid #bbb; */  
  }

  .sidebar-content {
    display: none;
    visibility: hidden;
    opacity: 0;
    animation: 0.6s ease 0s normal forwards 1 fadein;
  }

  .sidebar-open #sidebar {
    width: 200px;
  }

  .sidebar-open .sidebar-content {
    display: block;
    visibility: visible;
    opacity: 1;
  }
  
  .sidebar-text {
      color: rgb(17, 17, 17);
      font-family: Optima, sans-serif;
      font-size: larger;
      text-align: center; 
  }

  .card {
    text-align: center;
    display: flex;
    flex-flow: column;
    align-items: center;
    padding-bottom: 10px;
    
  }

  .side-image {
    height: 100px;
    background-position: center;
    background-size: contain; 
  }


  /* Bottom bar with selected flower images  */

  #bottom-bar {
    bottom: 15px;
    left: 0;
    width: 100%;
    transition: 0.5s;
    height: 200px;
  }

  .sidebar-open #bottom-bar {
    left: 200px;
    width: calc(100% - 200px);
  }

  .sidebar-open #selected-flowers {
    right: 200px;
    width: calc(100% + 200px);
  }

  .bouquet-item-image {
    height: 125px;
    background-position: center;
    background-size: contain; 
  }

  .bouquet-item {
    text-align: center;
    display: inline-block;
  }

  #selected-flowers {
    display: flex;
    flex-flow: wrap;
    justify-content: center;
    left: 0;
    bottom: 15px;
    width: 100%;
    transition: 0.5s;
    animation-direction: reverse;
  }

/* Bar with save bouquet/view all buttons */

  #bouquet-button-bar {
    height: 20px;
    display: block;
    padding: 0;
  }

  #bouquet-buttons {
    padding-bottom: 15px;
    text-align: center;
  }

  .btn {
    font-family: Optima, sans-serif;
    background-color: floralwhite;
    border-radius: 5px;
    font-size: 11px;
  }

  .bottom-btn {
    font-size: 14px;
  }

  
  #form-content > input[type=submit]:nth-child(11){
    background-color: floralwhite;
    font-family:  Optima, sans-serif;
    font-size: 12px;
    border-radius: 5px;
 }

  /* Pop up save bouquet form */

  #modal {
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.75);
  
  }
  
  #save-bouquet-form {
    background-color: rgb(255, 237, 194);
    width: 400px;
    margin: 20vh auto 0;
    padding: 40px;
    border-radius: 20px;
    text-align: center;  
  }

  #form-content {
    text-align: center;
    padding-bottom: 6px;
    font-family: Optima, sans-serif;
  }

  #create-btn {
    font-family: Optima, sans-serif;
  }

  /* View all bouquets */

#bouquetModal {
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.75);
}

#bouquet-list {
  background-color: rgb(255, 237, 194);
  width: 400px;
  height: 400px;
  margin: 20vh auto 0;
  padding: 20px;
  border-radius: 20px;
  text-align: center;
  overflow-x: hidden;  
}

ul {
  font-family: Optima, sans-serif;
  list-style: none;
}


/* massive amount of css for volume slider (sorry) */

.sliderContainer {
  justify-content: center;
}

input[type=range] {
  height: 25px;
  -webkit-appearance: none;
  margin: 10px 0;
  width: 100px;
  background: none;
}

input[type=range]:focus {
  outline: none;
}

input[type=range]::-webkit-slider-runnable-track {
  width: 100%;
  height: 2px;
  cursor: pointer;
  box-shadow: 1px 1px 10px #E3E4FF;
  background: #9BBA9E;
  border-radius: 10px;
  border: 2px solid #95A685;
}

input[type=range]::-webkit-slider-thumb {
  box-shadow: 0px 0px 0px #4F4D52;
  border: 1px solid #E3BCD9;
  height: 7px;
  width: 8px;
  border-radius: 400px;
  background: #E3BCD9;
  cursor: pointer;
  -webkit-appearance: none;
  margin-top: -3.25px;
}

input[type=range]:focus::-webkit-slider-runnable-track {
  background: #9BBA9E;
}

input[type=range]::-moz-range-track {
  width: 100%;
  height: 2px;
  cursor: pointer;
  box-shadow: 1px 1px 10px #E3E4FF;
  background: #9BBA9E;
  border-radius: 10px;
  border: 2px solid #95A685;
}

input[type=range]::-moz-range-thumb {
  box-shadow: 0px 0px 0px #4F4D52;
  border: 1px solid #E3BCD9;
  height: 18px;
  width: 18px;
  border-radius: 25px;
  background: #EDD1E2;
  cursor: pointer;
}

input[type=range]::-ms-track {
  width: 100%;
  height: 2px;
  cursor: pointer;
  background: transparent;
  border-color: transparent;
  color: transparent;
}

input[type=range]::-ms-fill-lower {
  background: #9BBA9E;
  border: 2px solid #95A685;
  border-radius: 20px;
  box-shadow: 1px 1px 10px #E3E4FF;
}

input[type=range]::-ms-fill-upper {
  background: #9BBA9E;
  border: 2px solid #95A685;
  border-radius: 20px;
  box-shadow: 1px 1px 10px #E3E4FF;
}

input[type=range]::-ms-thumb {
  margin-top: 1px;
  box-shadow: 0px 0px 0px #4F4D52;
  border: 1px solid #E3BCD9;
  height: 18px;
  width: 18px;
  border-radius: 25px;
  background: #EDD1E2;
  cursor: pointer;
}

input[type=range]:focus::-ms-fill-lower {
  background: #9BBA9E;
}

input[type=range]:focus::-ms-fill-upper {
  background: #9BBA9E;
}


 

